<resources>
    <string name="app_name"> </string>
    <string name="greetings">iAksyonPadayon.ph</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="forget_password">Forget Password?</string>

    <string name="hint_home_address">Enter Home Address</string>
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_contact">Enter Contact Number</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email_address">Enter Email Address</string>


    <string name="view_home_address">Home Address</string>
    <string name="view_first_name">First Name</string>
    <string name="view_contact">Contact Number</string>
    <string name="view_last_name">Last Name</string>
    <string name="view_password">Password</string>
    <string name="view_email_address">Email Address</string>


    <string name="pagAndam_text">PAG-ANDAM</string>
    <string name="pagLikas_text">PAG-LIKAS</string>
    <string name="pagAroBulig_text">PAG-AROBULIG</string>
    <string name="faqs">FAQ</string>
    <string name="john">John</string>
    <string name="hello">Hello</string>
</resources>